[package]
name = "protext"
version = "0.1.0"
edition = "2021"
authors = ["Mehmet T. AKALIN"]
license = "MIT"
description = "A Rust + WebAssembly text measurement and line-breaking engine backed by the browser Canvas API."
repository = "https://github.com/makalin/protext"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "TextMetrics",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
